navbar scaled down

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "bootstrap-vue": "^2.0.4",
         "gulp": "^4.0.2",
         "hchs-vue-charts": "^1.2.8",
-        "vue-burger-menu": "^2.0.3"
+        "vue-burger-menu": "^2.0.3",
+        "vue-chartkick": "^0.5.3"
     }
 }
