--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "gulp": "^4.0.2",
         "hchs-vue-charts": "^1.2.8",
         "vue-burger-menu": "^2.0.3",
-        "vue-chartkick": "^0.5.3"
+        "vue-chartkick": "^0.5.3",
+        "vuex": "^3.1.1"
     }
 }
